close #53 fixed smaller font and no wordwrap for resultpage

--- a/public_html/css/motiomera.css
+++ b/public_html/css/motiomera.css
@@ -1948,6 +1948,7 @@ table#alh_navtable
 	border-top: none;
 	padding: 5px;
 }
+.mmRightMinSidaBox table{font-size: 9px;}
 .mmRightSideContestBar
 {
 	margin: -15px 0 0;
